Use assert_readonly() to check that content is readonly

--- a/html-templates/template-element/content-attribute.html
+++ b/html-templates/template-element/content-attribute.html
@@ -18,57 +18,97 @@
 test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
+
+    assert_readonly(template, 'content',
+            'Content attribute of template element should be read-only');
+
+}, 'Content attribute of template element is read-only. ' +
+    'Test empty template');
+
+
+test(function() {
+    var doc = newHTMLDocument();
+    var template = doc.createElement('template');
     var el1 = doc.createElement('div');
     var el2 = doc.createElement('span');
     el1.appendChild(el2);
 
-    var valueBeforeChange = template.content;
-    template.content = el1;
+    template.content.appendChild(el1);
 
-    assert_equals(template.content, valueBeforeChange,
+    assert_readonly(template, 'content',
             'Content attribute of template element should be read-only');
 
 }, 'Content attribute of template element is read-only. ' +
-    'Assigning value to content property of template should be ignored');
+    'Test not empty template populated by appendchild()');
 
 
 test(function() {
     var doc = newHTMLDocument();
-    doc.body.innerHTML = '<template id="tmpl1" content="<div id=div1>Div content</div>"></template>';
+    doc.body.innerHTML = '<template>Text<div>DIV</div></template>';
 
-    var template = doc.querySelector('#tmpl1');
+    var template = doc.querySelector('template');
+
+    assert_readonly(template, 'content',
+            'Content attribute of template element should be read-only');
+
+}, 'Content attribute of template element is read-only. ' +
+    'Test not empty template populated by innerHTML');
+
+
+test(function() {
+    var doc = newHTMLDocument();
+    doc.body.innerHTML = '<template id="template1" content="Some text as a content"></template>';
+
+    var template = doc.querySelector('#template1');
+
+    assert_readonly(template, 'content',
+            'Content attribute of template element should be read-only');
+
+}, 'Content attribute of template element is read-only. ' +
+    'Test that custom content attribute named \'content\' doesn\'t ' +
+    'make content IDL attribute writable');
+
+
+test(function() {
+    var doc = newHTMLDocument();
+    doc.body.innerHTML = '<template id="template1" content="<div id=div1>Div content</div>"></template>';
+
+    var template = doc.querySelector('#template1');
+
+    assert_readonly(template, 'content',
+            'Content attribute of template element should be read-only');
 
     assert_equals(template.content.childNodes.length, 0,
             'Content attribute of template element should be read-only');
 
 }, 'Content attribute of template element is read-only. ' +
-    'HTML value of content attribute of template tag should be ignored');
+    'Test that custom content attribute named \'content\' doesn\'t ' +
+    'affect content IDL attribute');
 
 
-test(function() {
-    var doc = newHTMLDocument();
-    doc.body.innerHTML = '<template id="tmpl1" content="Some text as a content"></template>';
-
-    var template = doc.querySelector('#tmpl1');
-
-    assert_equals(template.content.childNodes.length, 0,
-            'Content attribute of template element should be read-only');
-
-}, 'Content attribute of template element is read-only. ' +
-    'Text value of content attribute of template tag should be ignored');
-
-
-testInIFrame('../resources/template-contents-attribute.html', function(context){
+testInIFrame('../resources/template-contents-attribute.html', function(context) {
     var doc = context.iframes[0].contentDocument;
 
     var template = doc.body.querySelector('template');
 
-    assert_equals(template.content.childNodes.length, 0,
+    assert_readonly(template, 'content',
             'Content attribute of template element should be read-only');
 
 }, 'Content attribute of template element is read-only. '
     + 'Text value of content attribute of template tag should be ignored, '
-    + 'when loading document from file');
+    + 'when loading document from a file');
+
+
+testInIFrame('../resources/template-contents.html', function(context) {
+    var doc = context.iframes[0].contentDocument;
+
+    var template = doc.body.querySelector('template');
+
+    assert_readonly(template, 'content',
+            'Content attribute of template element should be read-only');
+
+}, 'Content attribute of template element is read-only. '
+    + 'Test content attribute of a document loaded from a file');
 
 </script>
 </body>
