--- a/contributors/i18n/submitted/css3-counter-styles/css3-counter-styles-025.html
+++ b/contributors/i18n/submitted/css3-counter-styles/css3-counter-styles-025.html
@@ -6,6 +6,7 @@
 <link rel='author' title='Richard Ishida' href='mailto:ishida@w3.org'>
 <link rel='help' href='http://www.w3.org/TR/css-counter-styles-3/#simple-numeric'>
 <meta name='flags' content='font'>
+<meta name="assert" content="With list-style-type set to upper-roman, list markers above the limit specified in CSS3 will be rendered in the fallback counter style.">
 <style type='text/css'>
 .test { font-size: 25px; }
 ol { margin: 0; padding-left: 8em; }
