--- a/eventsource/eventsource-constructor-url-multi-window.htm
+++ b/eventsource/eventsource-constructor-url-multi-window.htm
@@ -11,7 +11,7 @@
       var test = async_test()
       function init() {
         test.step(function() {
-          source = new self[0].EventSource("resources/message.php")
+          source = new self[0].EventSource("message.php")
           source.onopen = function(e) {
             test.step(function() {
               assert_equals(source.readyState, source.OPEN)
