add label to help debug

--- a/live-events/test-case-live-event-1.html
+++ b/live-events/test-case-live-event-1.html
@@ -15,7 +15,7 @@
   <body>
     <h1>ARIA 1.0 Live Region Event Test Case: Add text content</h1>
     
-    <div id="TEST_ID" aria-live="assertive" >
+    <div id="TEST_ID" aria-live="assertive" aria-label="charlotte">
     </div>
     
     <button onclick="tryAgain()">Try Again</button>
