--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-polygon-001-ref.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-polygon-001-ref.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>shape-outside-floats-polygon-002-reference.html</title>
+<title>shape-outside-floats-polygon-001-reference.html</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <meta name="flags" content="ahem">
 <style>
@@ -9,7 +9,7 @@
     width: 400px;
     height: 400px;
     background: blue;
-    -webkit-writing-mode: vertical-rl;
+    writing-mode: vertical-lr;
 }
 .float-left {
     width: 20px;
