--- a/testcases-multiselectable/testcase-multiselectable-D.html
+++ b/testcases-multiselectable/testcase-multiselectable-D.html
@@ -10,14 +10,17 @@
     <h1>ARIA 1.0 Test Case: Listbox role with multiseclect</h1>
         
     <div role="listbox" aria-label="charlotte" aria-multiselectable="true">
-      <div role="option" aria-selected="false" id="ID1" tabindex="-1" onclick="handle1()">Option 1 (test for click elected)</div> 
-      <div role="option  aria-selected="false" id="ID2"="-1" tabindex="-1">Option 2</div>
+      <div role="option" aria-selected="false" id="ID1" tabindex="-1" onclick="handle1(event)">Option 1 (test for click elected)</div> 
+      <div role="option" aria-selected="false" id="ID2" tabindex="-1">Option 2</div>
       <div role="option" aria-selected="false" id="ID3" onmousedown="handle2(event)">Option 3 (test for shift click selected)</div> 
     </div>
     
     <script type="text/javascript">  
-     function handle1() {
+     function handle1(e) {
+        var node=document.getElementById('ID1');
         node.focus();
+        e.stopPropagation();
+        return false;
      }
      function handle2(e) {
         shiftpressed=0;
@@ -34,8 +37,5 @@
         return false;
      }
     </script>
-  
-  
-
 
 </body></html>
