--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-000-ref.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-000-ref.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>CSS RefTest Reference</title>
+<link rel="author" title="Adobe" href="http://html.adobe.com/">
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <meta name="flags" content="ahem">
 <style>
