--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-polygon-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-polygon-002.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>CSS Test: polygon shape-outside on floats</title>
+<link rel="author" title="Adobe" href="http://html.adobe.com/">
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <link rel="help" href="http://dev.w3.org/csswg/css-shapes-1/#shape-outside-property">
 <link rel="match" href="shape-outside-floats-polygon-002-ref.html">
