--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-rounded-rectangle-002-ref.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-rounded-rectangle-002-ref.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>shape-outside-floats-rounded-rectangle-002-reference.html</title>
+<link rel="author" title="Adobe" href="http://html.adobe.com/">
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <meta name="flags" content="ahem dom">
 <style>
