--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-rounded-rectangle-004.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-rounded-rectangle-004.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>CSS Test: rounded rectangle shape-outside on floats with clamped radii values</title>
+<link rel="author" title="Adobe" href="http://html.adobe.com/">
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
 <link rel="match" href="shape-outside-floats-rounded-rectangle-004-ref.html">
