--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-stacked-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-stacked-000.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>CSS Test: stacked floats with shape-outside</title>
+<link rel="author" title="Adobe" href="http://html.adobe.com/">
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <link rel="help" href="http://dev.w3.org/csswg/css-shapes-1/#relation-to-box-model-and-float-behavior">
 <link rel="match" href="shape-outside-floats-stacked-000-ref.html">
