--- a/dom/ranges/Range-set.html
+++ b/dom/ranges/Range-set.html
@@ -262,8 +262,8 @@ generate_tests(testSetStart, startTests);
 generate_tests(testSetEnd, endTests);
 generate_tests(testSetStartBefore, startBeforeTests);
 generate_tests(testSetStartAfter, startAfterTests);
-generate_tests(testSetEndBefore, startBeforeTests);
-generate_tests(testSetEndAfter, startAfterTests);
+generate_tests(testSetEndBefore, endBeforeTests);
+generate_tests(testSetEndAfter, endAfterTests);
 
 testDiv.style.display = "none";
 </script>
