--- a/dom/ranges/Range-commonAncestorContainer.html
+++ b/dom/ranges/Range-commonAncestorContainer.html
@@ -8,26 +8,9 @@
 <script>
 "use strict";
 
-testRanges.unshift("[detached]");
-
 for (var i = 0; i < testRanges.length; i++) {
 	test(function() {
-		var range;
-		if (i == 0) {
-			range = document.createRange();
-			range.detach();
-		} else {
-			range = rangeFromEndpoints(eval(testRanges[i]));
-		}
-
-		// "If the detached flag is set, throw an "InvalidStateError" exception
-		// and terminate these steps."
-		if (i == 0) {
-			assert_throws("INVALID_STATE_ERR", function() {
-				range.commonAncestorContainer;
-			}, "Detached range must throw InvalidStateError");
-			return;
-		}
+		var range = rangeFromEndpoints(eval(testRanges[i]));
 
 		// "Let container be start node."
 		var container = range.startContainer;
