--- a/dom/ranges/Range-surroundContents.html
+++ b/dom/ranges/Range-surroundContents.html
@@ -104,8 +104,8 @@ function restoreIframe(iframe, i, j) {
 	}
 	iframe.contentDocument.appendChild(referenceDoc.documentElement.cloneNode(true));
 	iframe.contentWindow.setupRangeTests();
-	iframe.contentWindow.testRangeInput = testRanges[i];
-	iframe.contentWindow.testNodeInput = testNodes[j];
+	iframe.contentWindow.testRangeInput = testRangesShort[i];
+	iframe.contentWindow.testNodeInput = testNodesShort[j];
 	iframe.contentWindow.run();
 }
 
@@ -302,9 +302,9 @@ function testSurroundContents(i, j) {
 testRanges.unshift('"detached"');
 
 var iStart = 0;
-var iStop = testRanges.length;
+var iStop = testRangesShort.length;
 var jStart = 0;
-var jStop = testNodes.length;
+var jStop = testNodesShort.length;
 
 if (/[0-9]+,[0-9]+/.test(location.search)) {
 	var matches = /([0-9]+),([0-9]+)/.exec(location.search);
@@ -320,8 +320,8 @@ for (var i = iStart; i < iStop; i++) {
 	domTests[i] = [];
 	positionTests[i] = [];
 	for (var j = jStart; j < jStop; j++) {
-		domTests[i][j] = async_test(i + "," + j + ": resulting DOM for range " + testRanges[i] + ", node " + testNodes[j]);
-		positionTests[i][j] = async_test(i + "," + j + ": resulting range position for range " + testRanges[i] + ", node " + testNodes[j]);
+		domTests[i][j] = async_test(i + "," + j + ": resulting DOM for range " + testRangesShort[i] + ", node " + testNodesShort[j]);
+		positionTests[i][j] = async_test(i + "," + j + ": resulting range position for range " + testRangesShort[i] + ", node " + testNodesShort[j]);
 	}
 }
 
