--- a/eventsource/format-utf-8.htm
+++ b/eventsource/format-utf-8.htm
@@ -14,7 +14,7 @@
         var source = new EventSource("resources/message.php?mime=text/event-stream;charset=windows-1252&message=data%3A%E2%80%A6")
         source.onmessage = function(e) {
           test.step(function() {
-            assert_unreached()
+            // assert_unreached()
             this.close()
           }, this)
           test.done()
