--- a/navigation-timing/test_document_open.html
+++ b/navigation-timing/test_document_open.html
@@ -7,7 +7,7 @@
 <link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-navigation-timing-interface"/>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="/webperf/tests/resources/webperftestharness.js"></script>
+<script src="resources/webperftestharness.js"></script>
 <link rel="stylesheet" href="/resources/testharness.css" />
 <script>
 setup({explicit_done: true});
@@ -78,6 +78,6 @@ the frame below ends with a green background.</p>
 
 <div id="log"></div>
 <br />
-<iframe id="frameContext" onload="onload_test();" src="/webperf/tests/resources/blank_page_yellow.htm" style="width: 250px; height: 250px;"></iframe>
+<iframe id="frameContext" onload="onload_test();" src="resources/blank_page_yellow.html" style="width: 250px; height: 250px;"></iframe>
 </body>
 </html>
