--- a/navigation-timing/test_no_previous_document.html
+++ b/navigation-timing/test_no_previous_document.html
@@ -7,7 +7,7 @@
 	<link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-navigation-timing-interface"/>
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="/webperf/tests/resources/webperftestharness.js"></script>
+        <script src="resources/webperftestharness.js"></script>
         <link rel="stylesheet" href="/resources/testharness.css" />
     
         <script>
@@ -36,6 +36,6 @@
         <p>This test validates the unload event times are 0 when there is no previous document.</p>
 
         <div id="log"></div><br />
-        <iframe id="frameContext" src="/webperf/tests/resources/blank_page_green.htm" style="width: 250px; height: 250px;"></iframe>
+        <iframe id="frameContext" src="resources/blank_page_green.html" style="width: 250px; height: 250px;"></iframe>
     </body>
 </html>
