--- a/navigation-timing/test_performance_attributes_exist_in_object.html
+++ b/navigation-timing/test_performance_attributes_exist_in_object.html
@@ -7,7 +7,7 @@
 	<link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-window.performance-attribute"/>
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="/webperf/tests/resources/webperftestharness.js"></script>
+        <script src="resources/webperftestharness.js"></script>
         <link rel="stylesheet" href="/resources/testharness.css" />
         <script>
           function onload_test() {
@@ -23,7 +23,7 @@
         <h1>Description</h1>
         <p>This test validates that the window.performance object exists in an
         object element (but does not validate that their values are correct).</p>
-        <object id="objectContext" onload="onload_test();" data="/webperf/tests/resources/blank_page_green.htm"></object>
+        <object id="objectContext" onload="onload_test();" data="resources/blank_page_green.html"></object>
         <div id="log"></div>
     </body>
 </html>
