--- a/navigation-timing/test_timing_client_redirect.html
+++ b/navigation-timing/test_timing_client_redirect.html
@@ -7,7 +7,7 @@
 	<link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-navigation-timing-interface"/>
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="/webperf/tests/resources/webperftestharness.js"></script>
+        <script src="resources/webperftestharness.js"></script>
         <link rel="stylesheet" href="/resources/testharness.css" />
         <script>
             setup({explicit_done: true});
@@ -50,6 +50,6 @@
            window.performance.timing.redirectStart/End times on a client side redirect.</p>
 
         <div id="log"></div><br />
-        <iframe id="frameContext" src="/webperf/tests/resources/blank_page_meta_redirect.htm" style="width: 250px; height: 250px;"></iframe>
+        <iframe id="frameContext" src="resources/blank_page_meta_redirect.html" style="width: 250px; height: 250px;"></iframe>
     </body>
 </html>
