--- a/navigation-timing/test_timing_server_redirect.html
+++ b/navigation-timing/test_timing_server_redirect.html
@@ -7,7 +7,7 @@
 	<link rel="help" href="http://www.w3.org/TR/navigation-timing/#sec-navigation-timing-interface"/>
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="/webperf/tests/resources/webperftestharness.js"></script>
+        <script src="resources/webperftestharness.js"></script>
 
         <script>
             function onload_test()
@@ -42,6 +42,6 @@
 
         <div id="log"></div>
         <br />
-        <iframe id="frameContext" onload="onload_test();" src="/webperf/tests/resources/redirect.php?location=/webperf/tests/resources/blank_page_green.htm" style="width: 250px; height: 250px;"></iframe>
+        <iframe id="frameContext" onload="onload_test();" src="resources/redirect.php?location=/web-platform-tests/navigation-timing/resources/blank_page_green.html" style="width: 250px; height: 250px;"></iframe>
     </body>
 </html>
