--- a/navigation-timing/test_unique_performance_objects.html
+++ b/navigation-timing/test_unique_performance_objects.html
@@ -8,13 +8,13 @@
 	<meta name="assert" content="Each browsing context must have a unique window.performance.timing attribute."/>
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="/webperf/tests/resources/webperftestharness.js"></script>
+        <script src="resources/webperftestharness.js"></script>
         <link rel="stylesheet" href="/resources/testharness.css" />
     </head>
     <body>
         <h1>Description</h1>
         <p>This test validates that each window has a unique window.performance object.</p>
-        <iframe id="frameContext" src="/webperf/tests/resources/blank_page_green.htm" style="display:none;";></iframe>
+        <iframe id="frameContext" src="resources/blank_page_green.html" style="display:none;";></iframe>
         <div id="log"></div>
         <script>
             test_namespace('timing');
