Fixed a few more links

--- a/navigation-timing/test_navigation_type_backforward.html
+++ b/navigation-timing/test_navigation_type_backforward.html
@@ -36,7 +36,7 @@
                 {
                     case 1:
                     {
-                        navigation_frame.location.href = '/web-platform-tests/navigation-timing/resources/blank_page_green_with_onunload.htm';
+                        navigation_frame.location.href = '/web-platform-tests/master/navigation-timing/resources/blank_page_green_with_onunload.html';
                         step++;
                         break;
                     }
