--- a/navigation-timing/test_timing_attributes_order.html
+++ b/navigation-timing/test_timing_attributes_order.html
@@ -30,7 +30,7 @@
                 {
                     case 1:
                     {
-                        navigation_frame.location.href = '/web-platform-tests/navigation-timing/resources/blank_page_green.htm';
+                        navigation_frame.location.href = '/web-platform-tests/master/navigation-timing/resources/blank_page_green.html';
                         step++;
                         break;
                     }
