--- a/navigation-timing/resources/blank_page_meta_redirect.html
+++ b/navigation-timing/resources/blank_page_meta_redirect.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-        <meta http-equiv="refresh" content="1;URL='blank_page_green.htm'" />
+        <meta http-equiv="refresh" content="1;URL='blank_page_green.html'" />
         <title>Redirect Placeholder</title>        
     </head>
     <body style="background-color:#FFFF00";>
