Fixed markup errors.
--HG--
branch : A

--- a/name-computation-input/610.html
+++ b/name-computation-input/610.html
@@ -7,6 +7,6 @@
    </head>
    <body>
     <input id="test" type="text" aria-label="bar" aria-labelledby="ID1 test">
-    <div id="ID1">foo</label>
+    <div id="ID1">foo</div>
    </body>
 </html>
