--- a/roles-properties-supported/roles-properties-supported-grid-aria-level-1.html
+++ b/roles-properties-supported/roles-properties-supported-grid-aria-level-1.html
@@ -6,7 +6,7 @@
       <title>&lt;div&gt; with role grid; supported state or property "aria-level" value of "1"</title>
    </head>
    <body>
-      <div id="test" role="grid" aria-level="1" aria-setsize="1" aria-posinset="1">Placeholder content</div>
+      <div id="test" role="grid" aria-level="1" aria-setsize="1" aria-posinset="1">Placeholder content
          <div role="row">
            <div role="columnheader" id="obj1">obj1</div>
          </div>
