Fixed markup errors.
--HG--
branch : A

--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-radio-aria-posinset-1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-radio-aria-posinset-1.html
@@ -11,6 +11,6 @@
       <div role="radiogroup">
          <div id="test" role="radio" aria-posinset="1">Placeholder content</div>
          <div id="obj1" role="radio">obj1</div>
-      <div>
+      </div>
    </body>
 </html>
