--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-row-aria-activedescendant-obj1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-row-aria-activedescendant-obj1.html
@@ -12,6 +12,7 @@
         <div id="test" role="row" tabindex="0" aria-activedescendant="obj1" tabindex="0">
           <div id="obj1" role="gridcell">obj1</div>
           <div id="obj2" role="gridcell">obj2</div>
+        </div>
       </div>
    </body>
 </html>
