--- a/setsize-posinset-level/setsize-posinset-level-2.html
+++ b/setsize-posinset-level/setsize-posinset-level-2.html
@@ -10,7 +10,7 @@
     <div role="tree">
       <div role="treeitem" aria-setsize="3" aria-posinset="1" tabindex="-1">Option 1</div> 
       <div role="treeitem" aria-setsize="3" aria-posinset="2" tabindex="-1" id="ID_TARGET">Option 2</div> 
-      <div role="treeitem" aria-setsize="3" aria-posinset="3" tabindex="-1">Option 3</li> 
+      <div role="treeitem" aria-setsize="3" aria-posinset="3" tabindex="-1">Option 3</div>
     </div>
     
     <h2>Description</h2>
@@ -50,7 +50,7 @@
       <li>role="treeitem": TreeItem</li>
       <li>LegacyIAccessible.Description will be in the form X of Y, 
         where X is the value of aria-posinset and Y is the value of aria-setsize</li>
-    </p>
+    </ul>
       
     <h3>ATK/AT-SPI</h3>
     <ul>
