--- a/namefromauthor-requ/879.html
+++ b/namefromauthor-requ/879.html
@@ -8,7 +8,7 @@
     <div role="listbox">
       <div role="option" aria-setsize="3" aria-label="foo" id="test" aria-posinset="1" tabindex="-1"></div> 
       <div role="option" aria-setsize="3" aria-posinset="2" tabindex="-1">Option 2</div> 
-      <div role="option" aria-setsize="3" aria-posinset="3" tabindex="-1">Option 3</li> 
+      <div role="option" aria-setsize="3" aria-posinset="3" tabindex="-1">Option 3</div>
     </div>
   </body>
 </html>
