--- a/namefromauthor-requ/881.html
+++ b/namefromauthor-requ/881.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <div role="radiogroup">
-      <div id="test" role="radio" aria-label="foo"/>
+      <div id="test" role="radio" aria-label="foo"></div>
       <div id="obj2" role="radio">obj2</div>
       </div>
    </body>
