--- a/setsize-posinset-level/setsize-posinset-level-3.html
+++ b/setsize-posinset-level/setsize-posinset-level-3.html
@@ -10,7 +10,7 @@
     <div role="tree">
       <div role="treeitem" aria-level="2" aria-setsize="3" aria-posinset="1" tabindex="-1">Option 1</div> 
       <div role="treeitem" aria-level="2" aria-setsize="3" aria-posinset="2" tabindex="-1" id="ID_TARGET" >Option 2</div> 
-      <div role="treeitem" aria-level="2" aria-setsize="3" aria-posinset="3" tabindex="-1">Option 3</li> 
+      <div role="treeitem" aria-level="2" aria-setsize="3" aria-posinset="3" tabindex="-1">Option 3</div>
     </div>
     
     <h2>Description</h2>
