--- a/aria-describedby/773.html
+++ b/aria-describedby/773.html
@@ -10,5 +10,5 @@
       <img src="foo.jpg" id="test" alt="test" aria-describedby="t1">
       <div id="t1" style="display:none">foo</div>
    </body>
-</html
+</html>
 
