Removed duplicated tabindex=0 attributes.
--HG--
branch : A

--- a/namefromauthor-requ/876.html
+++ b/namefromauthor-requ/876.html
@@ -7,7 +7,7 @@
       </title>
    </head>
    <body>
-      <div role="menu" tabindex="0" aria-activedescendant="obj1" tabindex="0">
+      <div role="menu" tabindex="0" aria-activedescendant="obj1">
 		  <div id="test" aria-label="foo" role="menuitem"></div>
 		  <div id="obj2" role="menuitem">obj2</div>
       </div>
