--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-radiogroup-aria-activedescendant-obj1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-radiogroup-aria-activedescendant-obj1.html
@@ -8,7 +8,7 @@
       </title>
    </head>
    <body>
-      <div id="test" role="radiogroup" tabindex="0" aria-activedescendant="obj1" tabindex="0">
+      <div id="test" role="radiogroup" tabindex="0" aria-activedescendant="obj1">
           <div id="obj1" role="radio">obj1</div>
           <div id="obj2" role="radio">obj2</div>
       </div>
