--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-rowgroup-aria-activedescendant-obj1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-rowgroup-aria-activedescendant-obj1.html
@@ -9,7 +9,7 @@
    </head>
    <body>
       <div role="grid">
-        <div id="test" tabindex="0" role="rowgroup" aria-activedescendant="obj1" tabindex="0">
+        <div id="test" tabindex="0" role="rowgroup" aria-activedescendant="obj1">
           <div id="obj1" role="row">
             <div role="gridcell">r1c1</div>
             <div role="gridcell">r1c2</div>
