Update tests for [NamedPropertiesObject] -> [Global] rename.

--- a/WebIDL/tests/submissions/heycam/Global-001.html
+++ b/WebIDL/tests/submissions/heycam/Global-001.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>[NamedPropertiesObject] prototype chain</title>
+<title>[Global] prototype chain</title>
 <script src="http://w3c-test.org/resources/testharness.js"></script>
 <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
 <script src="utils.js"></script>
@@ -11,7 +11,7 @@
 // Its [[Prototype]] points to the interface prototype object of any
 // interface the one [[Prototype]] is on inherits from, or Object.prototype.
 
-// feature: Window (interface) (with [NamedPropertiesObject])
+// feature: Window (interface) (with [Global])
 
 // window -> Window.prototype -> [named properties] -> EventTarget.prototype -> Object.prototype
 
