--- a/WebIDL/tests/submissions/heycam/Global-002.html
+++ b/WebIDL/tests/submissions/heycam/Global-002.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>[NamedPropertiesObject] property lookup</title>
+<title>[Global] property lookup</title>
 <script src="http://w3c-test.org/resources/testharness.js"></script>
 <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
 <script src="utils.js"></script>
@@ -17,7 +17,7 @@
 // [[GetOwnProperty]] also exposes other (expando) properties on the named
 // properties object.
 
-// feature: Window (interface) (with [NamedPropertiesObject])
+// feature: Window (interface) (with [Global])
 
 var hidden = document.getElementById("hidden");
 var form1 = document.getElementById("f1");
