--- a/WebIDL/tests/submissions/heycam/Global-003.html
+++ b/WebIDL/tests/submissions/heycam/Global-003.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>[NamedPropertiesObject] property lookup</title>
+<title>[Global] property lookup</title>
 <script src="http://w3c-test.org/resources/testharness.js"></script>
 <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
 <script src="utils.js"></script>
@@ -25,7 +25,7 @@
 // EventTarget.prototype and Object.prototype, not to be visible on the named
 // properties object.
 
-// feature: Window (interface) (with [NamedPropertiesObject])
+// feature: Window (interface) (with [Global])
 
 test(function() {
   assert_true("document" in window, '"document" in window');
