--- a/WebIDL/tests/submissions/heycam/Global-004.html
+++ b/WebIDL/tests/submissions/heycam/Global-004.html
@@ -18,7 +18,7 @@
 // Object.seal or Object.preventExtensions on it must fail and throw a
 // TypeError.
 
-// feature: Window (interface) (with [NamedPropertiesObject])
+// feature: Window (interface) (with [Global])
 
 test(function() {
   var w = document.getElementById("iframe1").contentWindow;
