--- a/WebIDL/tests/submissions/heycam/named-properties-002.html
+++ b/WebIDL/tests/submissions/heycam/named-properties-002.html
@@ -11,7 +11,7 @@
 // 4.6.2 Platform object [[GetOwnProperty]] method
 //
 // If an object supports named properties, then own properties exist on the
-// object corresponding to the supported property indexes.  Each property is
+// object corresponding to the supported property names.  Each property is
 // exposed through [[GetOwnProperty]] as being enumerable, configurable,
 // and writable if there is also an named property setter.
 //
