Change crosssite host name to www2

--- a/eventsource/request-cache-control.htm
+++ b/eventsource/request-cache-control.htm
@@ -9,7 +9,7 @@
     <div id="log"></div>
     <script>
       var crossdomain = location.href
-                    .replace('://', '://crosssite.')
+                    .replace('://', '://www2.')
                     .replace(/\/[^\/]*$/, '/')
 
       // running it twice to check whether it stays consistent
