--- a/eventsource/request-credentials.htm
+++ b/eventsource/request-credentials.htm
@@ -9,7 +9,7 @@
     <div id="log"></div>
     <script>
       var crossdomain = location.href
-                    .replace('://', '://crosssite.')
+                    .replace('://', '://www2.')
                     .replace(/\/[^\/]*$/, '/')
 
       function testCookie(desc, success, props, id) {
