Added missing </div> end tag.
--HG--
branch : A

--- a/setsize-posinset-level/setsize-posinset-level-4.html
+++ b/setsize-posinset-level/setsize-posinset-level-4.html
@@ -19,6 +19,7 @@
           <div role="treeitem" aria-setsize="2" aria-posinset="1" tabindex="-1">Item 1A</div>
           <div role="treeitem" aria-setsize="2" aria-posinset="2" tabindex="-1" id="ID_TARGET">Item 1B</div>
         </div> 
+      </div>
     </div>
     
     <h2>Description</h2>
